--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v6
         with:
           node-version-file: .nvmrc
-      - uses: actions/setup-pnpm@v4
+      - uses: pnpm/action-setup@v4
       - name: Install Dependencies
         run: |
           pnpm install
