--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,7 @@
     },
     "check-format": {},
     "dev": {
+      "dependsOn": ["^build"],
       "persistent": true,
       "cache": false
     }
