🚧 Create a client app

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,14 +3,21 @@ packages:
   - packages/*
 
 catalog:
-  "@effect/language-service": 0.72.0
-  "@effect/platform": 0.94.1
-  "@effect/platform-node": 0.104.0
-  "@types/node": ^24.10.9
+  '@effect-atom/atom-react': 0.4.6
+  '@effect/language-service': 0.72.0
+  '@effect/platform': 0.94.1
+  '@effect/platform-node': 0.104.0
+  '@types/node': ^24.10.9
+  '@types/react': 19.2.9
+  '@types/react-dom': 19.2.3
+  '@vitejs/plugin-react': 5.1.2
   effect: 3.19.14
   oxfmt: 0.26.0
   oxlint: 1.41.0
+  react: 19.2.3
+  react-dom: 19.2.3
   rrule: 2.8.1
   tsdown: 0.20.1
   tsx: 4.21.0
   typescript: 5.9.3
+  vite: 7.3.1
